--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <script src="script.js"></script>
 </head>
 <body>
-<div id = "tips">roll the cube</div>
+<div class = "game_name_top">Ludo game</div>
+<div class = "game_over" id="game_over">Ludo game</div>
+
 <div class = all_field>
     <div class = "board">
         <div class = "start comp_start">
@@ -79,6 +81,10 @@
         <div class = "cube7" id = "cube7"></div>
         <div class = "cube8" id = "cube8"></div>
         <div class = "cube9" id = "cube9"></div>
+    </div>
+    <div>
+        <div id = "tips">roll the cube</div>
+        <div class = "user_last_cube_numb" id = "user_last_cube_numb"></div>
     </div>
 
 </div>
